@@ -1,18 +1,25 @@
 package oc;
 
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
-import org.w3c.dom.Element;
+import static oc.RefreshListener.addRefreshListener;
+import static oc.RefreshListener.Priority.CHOOSER;
 
-import javax.swing.*;
-import java.awt.*;
+import java.awt.Color;
+import java.awt.Component;
+import java.awt.Font;
 import java.awt.event.ActionEvent;
 import java.awt.event.ActionListener;
+import java.lang.reflect.InvocationTargetException;
 import java.util.HashMap;
 import java.util.Vector;
 
-import static oc.RefreshListener.Priority.CHOOSER;
-import static oc.RefreshListener.addRefreshListener;
+import javax.swing.JButton;
+import javax.swing.JComboBox;
+import javax.swing.JList;
+import javax.swing.ListCellRenderer;
+
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
+import org.w3c.dom.Element;
 
 public class Chooser extends BuildaPanel implements ActionListener, BuildaSTK {
 
@@ -22,14 +29,15 @@ public class Chooser extends BuildaPanel implements ActionListener, BuildaSTK {
     BuildaVater buildaVater;
     boolean aktualisierungIgnorieren = false;
     private JComboBox myComboBox = new JComboBox();
-    private JButton cloneButton = new JButton(BuildaHQ.translate("Clonen"));
+    private final JButton cloneButton = new JButton(BuildaHQ.translate("Clonen"));
     private String reflectionKennung;
     private Object[] statischeEinträge;
     private Vector<String> spezialEinträge;
     ListCellRenderer renderer = new ListCellRenderer() {
 
-        public Component getListCellRendererComponent(JList list, Object value, int index, boolean isSelected, boolean cellHasFocus) {
-            Component c = defaultRenderer.getListCellRendererComponent(list, value, index, isSelected, cellHasFocus);
+        @Override
+		public Component getListCellRendererComponent(JList list, Object value, int index, boolean isSelected, boolean cellHasFocus) {
+            final Component c = defaultRenderer.getListCellRendererComponent(list, value, index, isSelected, cellHasFocus);
 
 
             for (int i = 0; i < statischeEinträge.length; ++i) {
@@ -40,7 +48,7 @@ public class Chooser extends BuildaPanel implements ActionListener, BuildaSTK {
             }
 
             for (int i = 0; i < spezialEinträge.size(); ++i) {
-                if (spezialEinträge.get(i).equals((String) value)) {
+                if (spezialEinträge.get(i).equals(value)) {
                     c.setForeground(new Color(30, 205, 0));
                     break;
                 }
@@ -49,10 +57,10 @@ public class Chooser extends BuildaPanel implements ActionListener, BuildaSTK {
             return c;
         }
     };
-    private int kategorie;
+    private final int kategorie;
     private boolean useActionPerformed = true;
     private Eintrag myEintrag = null;// = new LeererEintrag(0,0);
-    private HashMap<String, String> multipleArmyClasses = new HashMap<String, String>();
+    private final HashMap<String, String> multipleArmyClasses = new HashMap<String, String>();
 
     public Chooser(BuildaVater bv, int lX, int lY, String reflectionKennung, Object[] alleEinträge, int kategorie, ActionListener cloneListener) {  // ACHTUNG: wenn mehr oder weniger als 2 Hauptsachen zum panel geaddet werden, muss aktuellenEintragLöschen geändert werden! weil dann der index falsch ist, an dem irgendwas ins panel geaddet ist.
         this.buildaVater = bv;
@@ -108,10 +116,11 @@ public class Chooser extends BuildaPanel implements ActionListener, BuildaSTK {
         return this.myComboBox;
     }
 
-    public double getKosten() {
+    @Override
+	public double getKosten() {
         try {
-            return ((Eintrag) myEintrag).getKosten();
-        } catch (Exception e) {
+            return myEintrag.getKosten();
+        } catch (final Exception e) {
             return 0;
         }
     }
@@ -141,9 +150,9 @@ public class Chooser extends BuildaPanel implements ActionListener, BuildaSTK {
         panel.setSize(x, y + randAbstand);
     }
 
-    public void setAuswahlen(Vector v) {
+    public void setAuswahlen(Vector<?> v) {
         useActionPerformed = false;
-        String currentSelected = selectedEntry();
+        final String currentSelected = selectedEntry();
 
         myComboBox.removeAllItems();
         for (int i = 0; i < v.size(); i++) {
@@ -159,15 +168,15 @@ public class Chooser extends BuildaPanel implements ActionListener, BuildaSTK {
         useActionPerformed = true;
     }
 
-    public void erstelleEintrag(String name) {
-        String umgeformterName = BuildaHQ.formZuKlassenName(name);
+    public void erstelleEintrag(String name) throws IllegalArgumentException, InvocationTargetException, NoSuchMethodException, SecurityException {
+        final String umgeformterName = BuildaHQ.formZuKlassenName(name);
         if (umgeformterName.equals("")) {
             erstelleLeerenEintrag();
         } else {
             String finalClassName = "";
             try {
                 // Determine whether to use a WHFB or a Wh40k Army-Class
-                String armyPackage = OnlineCodex.ARMY_PACKAGE;
+                final String armyPackage = OnlineCodex.ARMY_PACKAGE;
 
                 // Check if the requested class is used by multiple armies
                 if (this.multipleArmyClasses.containsKey(name)) {
@@ -178,41 +187,41 @@ public class Chooser extends BuildaPanel implements ActionListener, BuildaSTK {
                 finalClassName = finalClassName.replaceAll("\\[[\\w ]{1,}\\]", ""); // Remove "Forgeworld" label from class name
 
                 try {
-                    Class myClass = Class.forName(armyPackage + "units." + finalClassName);
+                    final Class<?> myClass = Class.forName(armyPackage + "units." + finalClassName);
 
                     aktuellenEintragLöschen(); // wird auch in erstelleLeerenEintrag() aufgerufen...
 
-                    myEintrag = (Eintrag) (myClass.newInstance());
-                } catch (Exception e) {
+                    myEintrag = (Eintrag) (myClass.getDeclaredConstructor().newInstance());
+                } catch (final Exception e) {
 
                     try {
                         if (reflectionKennung == "") {
-                            Class myClass = Class.forName(armyPackage + "units." + umgeformterName.substring(0, 2).toLowerCase() + "." + finalClassName);
+                            final Class<?> myClass = Class.forName(armyPackage + "units." + umgeformterName.substring(0, 2).toLowerCase() + "." + finalClassName);
 
                             aktuellenEintragLöschen(); // wird auch in erstelleLeerenEintrag() aufgerufen...
 
-                            myEintrag = (Eintrag) (myClass.newInstance());
+                            myEintrag = (Eintrag) (myClass.getDeclaredConstructor().newInstance());
                         } else {
-                            Class myClass = Class.forName(armyPackage + "units." + reflectionKennung.toLowerCase() + "." + finalClassName);
+                            final Class<?> myClass = Class.forName(armyPackage + "units." + reflectionKennung.toLowerCase() + "." + finalClassName);
 
                             aktuellenEintragLöschen(); // wird auch in erstelleLeerenEintrag() aufgerufen...
 
-                            myEintrag = (Eintrag) (myClass.newInstance());
+                            myEintrag = (Eintrag) (myClass.getDeclaredConstructor().newInstance());
                         }
 
-                    } catch (Exception ex) {
+                    } catch (final Exception ex) {
                         if (reflectionKennung == "") { //Fall für Einheiten in APO
-                            Class myClass = Class.forName(armyPackage + "units." + umgeformterName.substring(0, 3).toLowerCase() + "." + finalClassName);
+                            final Class<?> myClass = Class.forName(armyPackage + "units." + umgeformterName.substring(0, 3).toLowerCase() + "." + finalClassName);
 
                             aktuellenEintragLöschen(); // wird auch in erstelleLeerenEintrag() aufgerufen...
 
-                            myEintrag = (Eintrag) (myClass.newInstance());
+                            myEintrag = (Eintrag) (myClass.getDeclaredConstructor().newInstance());
                         } else {
-                            Class myClass = Class.forName(armyPackage + "units." + umgeformterName);
+                            final Class<?> myClass = Class.forName(armyPackage + "units." + umgeformterName);
 
                             aktuellenEintragLöschen(); // wird auch in erstelleLeerenEintrag() aufgerufen...
 
-                            myEintrag = (Eintrag) (myClass.newInstance());
+                            myEintrag = (Eintrag) (myClass.getDeclaredConstructor().newInstance());
                         }
 
                     }
@@ -226,7 +235,7 @@ public class Chooser extends BuildaPanel implements ActionListener, BuildaSTK {
                 myEintrag.setKategorie(kategorie);
                 myEintrag.setBuildaVater(buildaVater);
                 panel.add(myEintrag.getPanel());
-            } catch (ClassNotFoundException e) {
+            } catch (final ClassNotFoundException e) {
                 OnlineCodex.getInstance().fehler("Klasse \"" + finalClassName + "\" nicht gefunden.\nBitte melden!!");
                 erstelleLeerenEintrag();
             } catch (ClassCastException | InstantiationException | IllegalAccessException e) {
@@ -242,9 +251,16 @@ public class Chooser extends BuildaPanel implements ActionListener, BuildaSTK {
         return ((String) (myComboBox.getSelectedObjects()[0]));
     }
 
-    public void actionPerformed(ActionEvent event) {
+    @Override
+	public void actionPerformed(ActionEvent event) {
         if (useActionPerformed) {
-            erstelleEintrag(selectedEntry());
+            try {
+				erstelleEintrag(selectedEntry());
+			} catch (IllegalArgumentException | InvocationTargetException | NoSuchMethodException
+					| SecurityException e) {
+				// TODO Auto-generated catch block
+				e.printStackTrace();
+			}
         }
     }
 
@@ -255,7 +271,7 @@ public class Chooser extends BuildaPanel implements ActionListener, BuildaSTK {
             myEintrag = null;
             try {
                 panel.remove(2);
-            } catch (Exception e) {
+            } catch (final Exception e) {
                 LOGGER.error("", e);
             }
         }
@@ -271,7 +287,7 @@ public class Chooser extends BuildaPanel implements ActionListener, BuildaSTK {
     public String getText() {
         try {
             return myEintrag.getText();
-        } catch (Exception e) {
+        } catch (final Exception e) {
             return "";
         }
     }
@@ -280,7 +296,7 @@ public class Chooser extends BuildaPanel implements ActionListener, BuildaSTK {
         //LOGGER.info("Chooser-getSaveText");
         try {
             return myEintrag.getSaveText(trenner);
-        } catch (Exception e) {
+        } catch (final Exception e) {
             return "";
         }
     }
@@ -289,7 +305,7 @@ public class Chooser extends BuildaPanel implements ActionListener, BuildaSTK {
         //LOGGER.info("Chooser-getSaveElement");
         if (getComboBox().getSelectedObjects()[0].toString().trim().equals("")) return null;
 
-        Element root = myEintrag.getSaveElement();
+        final Element root = myEintrag.getSaveElement();
         root.setAttribute("selection", getComboBox().getSelectedObjects()[0].toString());
 
 //    	Element root = BuildaHQ.getNewXMLElement("Eintrag");
